<resources>
    <string name="app_name" translatable="false">Taraffac</string>
    <string name="REGISTER_main" translatable="false">REGISTER</string>
    <string name="LOG_IN_main" translatable="false">LOG IN</string>

    <string name="desc">Image</string>
    <string name="desc_back">Image</string>
    <string name="tatil_login">LOG IN </string>
    <string name="email_login">Email: </string>
    <string name="pass_login">Password:</string>
    <string name="butt_login">LOG IN </string>
    <string name="star_login">* </string>
    <string name="star1_login">*</string>
    <string name="hint_login">Email</string>
    <string name="hint1_login">Password</string>
    <string name="name_register">Name:</string>
    <string name="email_register">Email:</string>
    <string name="Password_register">Password:</string>
    <string name="Confirm_Password_register">Confirm Password:</string>
    <string name="butt_register"> REGISTER </string>
    <string name="hint_register">User Name</string>
    <string name="hint1_register">Email</string>
    <string name="hint2_register">Password</string>
    <string name="hint3_register">Confirm_Password</string>
    <string name="tatil_register">REGISTER </string>
    <string name="desc_register">Image</string>
    <string name="profile">Profile</string>
    <string name="deactivate">Deactivated</string>
    <string name="activate">Activated</string>
    <string name="log_out">Log out</string>
    <string name="type">Type:</string>
    <string name="size">Size:</string>
    <string name="save">Save</string>
    <string name="cushion_type">Cushion</string>
    <string name="table_type">Table</string>
    <string name="add_speed_bump">Add speed bump</string>
    <string name="small">Small</string>
    <string name="midium">Midium</string>
    <string name="hump_type">Hump</string>
    <string name="large">Large</string>
    <string name="hump_image">Image</string>
    <string name="cushion_image">Image</string>
    <string name="table_image">Image</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="x">X</string>
    <string name="delete_speedbump">Delete SpeedBump :</string>
    <string name="are_you_sure_you_want_to_delete_this_speedbump">Are you sure you want to delete this speed bump ?</string>
    <string name="x1">x</string>
    <string name="deleting_was_successful">Deleting was successful</string>
    <string name="speed_bump_information">speed bump information</string>
    <string name="edit">Edit</string>
    <string name="report">Report</string>
    <string name="edit_speed_bump">Edit speed bump</string>
    <string name="cancel">Cancel</string>
    <string name="hint_Username">Username</string>

    <string name="hump">Hump</string>
    <string name="table">Table</string>
    <string name="cushion">Cushion</string>

    <string name="editing">The editing was successful</string>
    <string name="report_main">Report</string>
    <string name="damaged_bump">The speed bump is damaged (maintenance is required) </string>
    <string name="other">Other</string>
    <string name="violating_the_location">The speed bump location imposes significant risk/discomfort</string>
    <string name="violating_the_standard">The speed bump size/type imposes significant risk/discomfort</string>
    <string name="The">The speed bump imposes unnecessary/unacceptable risk</string>

    <string name="report_speedbump">Report speed bump</string>
    <string name="why_do_you_want_to_report_this_speedbump">Why do you want to report this speed bump ?</string>
    <string name="the_report_was_sent_successfully">The report was sent successfully</string>
    <string name="profile_img">Image</string>
    <string name="name_profile">Name:</string>
    <string name="email_profile">Email:</string>
    <string name="adding_type">Adding type:</string>
    <string name="delete_acc">Delete Account</string>
    <string name="name_pro">Your Name </string>
    <string name="email_pro">Your Email </string>
    <string name="adding_pro">Voice command</string>


    <string name="hint_name_edit">Name</string>
    <string name="hint_email_edit">Email</string>
    <string name="voice">Voice command</string>
    <string name="display">Display option</string>
    <string name="Editing_was_successful">Editing was successful</string>
    <string name="Speed_bump_information">Speed bump information</string>

    <string name="add"> Add</string>
    <string name="title_activity_map">Map</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="_000_0_miles_hour">000.0 miles/hour</string>
    <string name="notify">Notify</string>
    <string name="delete">Delete</string>
    <string name="type1Home">Type1</string>
    <string name="size1Home">Size1</string>
    <string name="editebumpHome">editeBump</string>
    <string name="reportbumpHOme">ReportBump</string>
    <string name="show">show</string>
    <string name="deleteEdit">Delete</string>
    <string name="userType" />
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="usrname">Usrname</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="logo_image">logo_image</string>
    <string name="forget_password_login">Forget Password ?</string>
    <string name="new_user_sign_up_login">New User? Sign UP</string>
    <string name="login_go">Go</string>
    <string name="go_login">Go</string>
    <string name="welcome_register">Welcome</string>
    <string name="signup_to_start_register">SignUp to start</string>
    <string name="full_name_register">Full name</string>
    <string name="register_register">Register</string>
    <string name="already_hav_an_account_login">Already hav an account ? LogIn</string>
    <string name="confirm_password_re">Confirm Password</string>
    <string name="your_name_profile">Your name</string>
    <string name="something_profile">something</string>
    <string name="profilre_39">39</string>
    <string name="full_name_profile">Full Name</string>
    <string name="your_email_profilee">Your Email</string>
    <string name="profille_email">Email</string>
    <string name="namee_profile">Name</string>
    <string name="adding_type_profile">Adding Type</string>
    <string name="voice_command_profile">Voice Command</string>
    <string name="display_option_profile">Display Option</string>
    <string name="edit_profile">Edit</string>
    <string name="delete_profile_profile">Delete Profile</string>
    <string name="your_name_profille">Your name</string>
    <string name="image_user_profile">image_user_profile</string>
    <string name="edittt_profile">Edit</string>
    <string name="taraffac">Taraffac</string>
    <string name="navi_o">Open navigation drawer</string>
    <string name="navi_c">Close navigation drawer</string>
    <string name="email_in_register">Email</string>
    <string name="navi"> toolbar</string>
    <string name="edit_profile_profile">Edit Profile</string>
    <string name="adding_type_in_profile">Adding type</string>
    <string name="email_in_ligin">Email</string>
    <string name="have_account_login_login">Have Account ? LOGIN</string>
    <string name="have_account_login_2">Have Account ? LOGIN</string>
    <string name="edit_profile_edit">Edit Profile</string>
    <string name="user_profile_P">User Profile</string>
    <string name="name_reg">Name</string>
    <string name="add_test_map">Add</string>
    <string name="active_test_map">Active</string>


</resources>