<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABB9C5"
    tools:context=".report">

    <Button
        android:id="@+id/but_close_re"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:background="@drawable/style_button"
        android:text="@string/x"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/btn_report"
        android:layout_width="124dp"
        android:layout_height="68dp"
        android:background="@drawable/style_button"
        android:text="@string/report_main"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="311dp"
        android:layout_height="42dp"
        android:text="@string/damaged_bump"
        android:textColor="#373636"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="311dp"
        android:layout_height="42dp"
        android:text="@string/other"
        android:textColor="#373636"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="311dp"
        android:layout_height="42dp"
        android:text="@string/violating_the_location"
        android:textColor="#373636"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="311dp"
        android:layout_height="42dp"
        android:text="@string/violating_the_standard"
        android:textColor="#373636"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="413dp"
        android:layout_height="82dp"
        android:text="@string/reprt_speedbump"
        android:textColor="#020829"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="380dp"
        android:layout_height="78dp"
        android:text="@string/why_do_you_want_to_report_this_speedbump"
        android:textColor="#373636"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />
</androidx.constraintlayout.widget.ConstraintLayout>