<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ABB9C5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView19"

        android:layout_width="69dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="293dp"
        android:layout_marginRight="293dp"
        android:layout_marginBottom="521dp"
        android:text="@string/type"
        android:textColor="#100808"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView20"

        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="489dp"
        android:layout_marginEnd="291dp"
        android:layout_marginRight="291dp"
        android:layout_marginBottom="200dp"
        android:text="@string/size"
        android:textColor="#100808"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView3"

        android:layout_width="94dp"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="264dp"
        android:layout_marginLeft="264dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="383dp"
        android:contentDescription="@string/cushion_image"
        android:src="@drawable/speed_cushion"
        tools:src="@drawable/speed_cushion"
        tools:srcCompat="@drawable/speed_cushion" />

    <ImageView
        android:id="@+id/imageView4"

        android:layout_width="97dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="286dp"
        android:layout_marginRight="286dp"
        android:layout_marginBottom="386dp"
        android:contentDescription="@string/hump_image"
        android:src="@drawable/speed_hump"
        tools:src="@drawable/speed_hump"
        tools:srcCompat="@drawable/speed_hump" />


    <ImageView
        android:id="@+id/imageView2"

        android:layout_width="98dp"
        android:layout_height="97dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="385dp"
        android:contentDescription="@string/table_image"
        android:src="@drawable/speed_table"
        tools:src="@drawable/speed_table"
        tools:srcCompat="@drawable/speed_table" />

    <RadioGroup
        android:id="@+id/type"

        android:layout_width="350dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="273dp"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/add_hump"

            android:layout_width="96dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hump_type"
            android:textColor="#100808" />


        <RadioButton
            android:id="@+id/add_table"

            android:layout_width="96dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/table_type"
            android:textColor="#100808" />

        <RadioButton
            android:id="@+id/add_cushion"

            android:layout_width="96dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cushion_type"
            android:textColor="#100808" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView21"

        android:layout_width="276dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:layout_marginBottom="560dp"
        android:gravity="center"
        android:text="@string/add_speed_bump"
        android:textColor="#100808"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:textSize="24sp" />

    <RadioGroup
        android:id="@+id/size"

        android:layout_width="299dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="571dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/add_large"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/large"
            android:textColor="#100808" />

        <RadioButton
            android:id="@+id/add_mid"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/midium"
            android:textColor="#100808" />

        <RadioButton
            android:id="@+id/radioButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/small"
            android:textColor="#100808" />

    </RadioGroup>


</RelativeLayout>